Corrections contraste

--- a/new/style.css
+++ b/new/style.css
@@ -772,7 +772,7 @@ h4 {
 }
 
 .tc-white {
-    color: #000000 !important;
+    color: #FFFFFF !important;
 }
 /*#5dcef0 bleu clair*/
 .col-sm-12 p {
